Fixed the tooltip to be a single instance.  Removed flicker.

--- a/js_src/fisher/ui/fish/fish.css
+++ b/js_src/fisher/ui/fish/fish.css
@@ -82,14 +82,17 @@
   z-index: 4;
 }
 
-/* For the FishTimeToolip */
-.goog-tooltip {
+.ff-fish-time-tooltip {
   background-color: #333;
   border: 1px solid #555;
   color: TIME_COLOR;
   font-size: 12px;
+  margin-left: -60px;
+  margin-top: 30px;
   padding: 10px;
+  position: absolute;
   text-align: center;
+  width: 120px;
   z-index: 5;
   @mixin border_radius(5px);
 }
